sec:Theorie - Bindung Eltern

--- a/content/1_theorie.tex
+++ b/content/1_theorie.tex
@@ -53,7 +53,7 @@ Emotionen sind durch ihre motivationale Kraft oder Handlungstendenz gekennzeichn
 
 Die \textit{emotionale Selbstregulierung} bezeichnet die Fähigkeit, innerer Gefühlszustände zu initiieren, zu hemmen oder zu modulieren, um ein Ziel zu erreichen \cite{Siegler2008}. In den ersten Lebensmonaten helfen Eltern ihren Kindern ihre emotionale Erregung zu regulieren, indem sie kontrollieren, wie stark diese den stimulierenden Ereignissen ausgesetzt sind \cite{Gianino1988}. Ein Säugling ist weniger empfindlich, äussert häufig angenehme Emotionen, erkundet sein Umfeld interessierter und ist leichter zu beruhigen, wenn dessen Eltern angemessen und liebevoll auf seine Hinweisreize reagieren \cite{Crockenberg2004}. Bezugspersonen, die gefühlsbelastenden Erlebnissen des Kindes unzureichend regulieren, riskieren, dass sich Gehirnstrukturen unzureichend entwickeln, welche für Stressregulierung dienen \cite[S.~250]{Berk2011}. Ab dem achten Monat beginnt der Säugling mit der sozialen Bezugnahme, er sucht aktiv nach emotional bewertenden Informationen von einem ihm vertrauten Person \cite{Mumme2007}. Im Allgemein geht die soziale Selbstregulierung mit einer höheren sozialen Kompetenz und einem geringeren Problemverhalten einher \cite[S.~580]{Siegler2008}. 
 
-Die Qualität der Eltern-Kind-Beziehung kann die emotionale Entwicklung der Kinder auf verschiedene Arten beeinflussen. Es scheint als ob die Beziehungsqualität das Sicherheitsgefühl des Kindes sowie die Empfindung gegenüber der eigenen Person und andere Menschen beeinflusst (vgl. Kapitel \titleref{sec:Bindung}, S. \pageref{sec:Bindung}). Diese Gefühle wiederum, beeinflusst die Emotionalität der Kinder \cite[S.~561]{Siegler2008}. Im Allgemeinen zeigen Kinder mit einer sicheren Bindung zu ihren Eltern eher positive Emotionen und weniger soziale Ängstlichkeit, verglichen mit Kindern mit einer unsichere Bindung \cite{Bohlin2000}. Der Ausdruck von Emotionen der Eltern kann die soziale Kompetenz und das psychische Wohlbefinden der Kinder beeinflussen. Die Sicht der Kinder auf sich selbst und andere hängt im hohen Masse von den Emotionen ab, die zu Hause gezeigt werden \cite{Dunsmore1997}. Zudem dient der elterliche Umgang mit Emotionen den Kindern als Modell, im Sinne von wann und wie Emotionen ausgedrückt werden \cite{Denham1994}. Dies kann das kindliche Verständnis zwischenmenschlicher Beziehung insofern beeinflussen, welche Formen des emotionalen Ausdrucks angemessen und effektiv ist \cite{Halberstadt1995}. Die Reaktionen der Eltern auf die Emotionen der Kinder scheinen einen Einfluss auf die emotionale Ausdrucksweise der Kinder zu haben. Werden Traurigkeit und Ängstlichkeit bei Kinder von den Eltern abgetan oder deren Gefühle kritisiert, so sind diese Kinder im Allgemeinen weniger emotional und weisen eine geringere soziale Kompetenz auf als Kinder, deren Eltern sie emotional unterstützen \cite{Eisenberg1998, McDowell2000}. 
+Die Qualität der Eltern-Kind-Beziehung kann die emotionale Entwicklung der Kinder auf verschiedene Arten beeinflussen. Es scheint als ob die Beziehungsqualität das Sicherheitsgefühl des Kindes sowie die Empfindung gegenüber der eigenen Person und andere Menschen beeinflusst (vgl. Unterkapitel \titleref{par:Bindung}). Diese Gefühle wiederum, beeinflusst die Emotionalität der Kinder \cite[S.~561]{Siegler2008}. Im Allgemeinen zeigen Kinder mit einer sicheren Bindung zu ihren Eltern eher positive Emotionen und weniger soziale Ängstlichkeit, verglichen mit Kindern mit einer unsichere Bindung \cite{Bohlin2000}. Der Ausdruck von Emotionen der Eltern kann die soziale Kompetenz und das psychische Wohlbefinden der Kinder beeinflussen. Die Sicht der Kinder auf sich selbst und andere hängt im hohen Masse von den Emotionen ab, die zu Hause gezeigt werden \cite{Dunsmore1997}. Zudem dient der elterliche Umgang mit Emotionen den Kindern als Modell, im Sinne von wann und wie Emotionen ausgedrückt werden \cite{Denham1994}. Dies kann das kindliche Verständnis zwischenmenschlicher Beziehung insofern beeinflussen, welche Formen des emotionalen Ausdrucks angemessen und effektiv ist \cite{Halberstadt1995}. Die Reaktionen der Eltern auf die Emotionen der Kinder scheinen einen Einfluss auf die emotionale Ausdrucksweise der Kinder zu haben. Werden Traurigkeit und Ängstlichkeit bei Kinder von den Eltern abgetan oder deren Gefühle kritisiert, so sind diese Kinder im Allgemeinen weniger emotional und weisen eine geringere soziale Kompetenz auf als Kinder, deren Eltern sie emotional unterstützen \cite{Eisenberg1998, McDowell2000}. 
 
 \paragraph{Bindung}\label{par:Bindung}
 Unter Bindung wird eine emotionale Beziehung zu einer bestimmten Person verstanden, die räumlich und zeitlich Bestand hat \cite[S.~585ff]{Siegler2008}. Die frühe Beziehungen der Kinder zu ihren Eltern beeinflusst die Art der Interaktionen mit anderen Menschen vom Kleinkindalter bis zum Erwachsenenalter, sowie ihr Selbstwertgefühl. Bindung kann als eine besondere Art einer affektiv getragenen sozialen Beziehung zwischen dem Kind und einer bevorzugten Person, die als stärker und klüger angesehen wird, verstanden werden \cite{Biringen1994}. Diese Gefühlsbeziehung zwischen dem Kind und der primären Bezugsperson wird auch als dyadische Beziehung in der psychoanalytischen Lieteratur beschrieben \cite{Resch1999}. Die Bindungstheorie wurde von John \citeA{Bowlby1969, Bowlby1973, Bowlby1988} und \citeA{Ainsworth1978} entwickelt und konzeptualisisert. Bolwbys Bindungstheorie ist stark von den Lehren Freuds beeinflusst. Insbesondere dadurch, dass die frühsten Beziehungen der Säuglinge zu ihren Müttern ihre späte Entwicklung formen \cite{Siegler2008}. Zudem wurde die Theorie interdisziplinär formuliert und hat ihre Wurzeln neben der psychonalytischen auch in der ethologischen und kognitiven Wissenschaft \cite{Resch1999}. Die Bindungstheorie beschreibt die angeboren Tendenz des menschlichen Individuums, starke Gefühlsbande zu spezifischen Personen der Umgebung zu bilden. Eine Zerstörung dieser Bande durch Trennung oder Verlust zu einer Bezugsperson kann zu affektiven Störungen führen \cite{Resch1999}. 
@@ -76,10 +76,15 @@ Das \textit{Selbstwertgefühl} ist ein wichtiges Element des Selbstkonzepts und 
 Unter dem Medienverhalten der Eltern laufen viele Faktoren zusammen. Wie bereits erläutert, definiert sich diese Arbeit über das Medienverhalten der Eltern und soll unter dem Gesichtspunkt der Bindung, dem Stress und dem subjektiven Wohlbefinden betrachtet werden. Diese theoretischen Konstrukte werden im Folgenden für die in dieser Arbeit notwendigen Tiefe behandelt.
 
 % ---------------------------------------
-\subsubsection{TBD: Bindungsstatus der Eltern}\label{sec:Bindungsstatus}
+\subsubsection{Bindungsstatus der Eltern}\label{sec:Bindungsstatus}
+Dieses Kapitel behandelt die Bindungstheorie aus Sicht der Eltern. Die Grundlagen dazu wurde im Absatz Bindung im Abschnitt \titleref{sec:Entwicklungsaufgaben} behandelt.
 
+\citeA{Bowlby1973} postuliert, dass frühe Bindungserfahrungen in einem eigenständigen, repräsentativem System zusammengelagert werden, welches als \textit{Inneres Arbeitsmodell von Bindung} bezeichnet wird. Dieses Arbeitsmodell leitet die Handlungen der Eltern gegenüber ihren Kindern und beeinflussen die Bindungssicherheit dieser \cite{Siegler2008}. Diese Bindungsmodelle bei Erwachsenen basieren auf der Wahrnehmungen der eigenen Kindheitserfahrungen hinsichtlich der Beziehung zu ihren Eltern sowie der Wahrnehmung der Einflüsse von dieser Beziehung auf das Erwachsenenalter \cite{Main1985}.
 
-Siehe auch AAS Einleitung von \citeA{Schmidt2004}.
+Die elterlichen Bindungsmodelle der Eltern werden in der Regel in vier Bindungkategorien unterteilt: (1) autonome oder sichere, (2) abweisende, (3) verstrickte und (4) ungelöst-desorintierte Erwachsene \cite[S.~593ff]{Siegler2008}. Da diese Bindungsmuster das Ergebnis der reziproken Interaktion zwischen Kind und Bezugsperson darstellen, sind die frühen primären Bindungsmuster auf das Feinfühligkeitsverhalten der Bindungsperson zurückzuführen. Diese können bezüglich der Reaktionen der Bindungsperson auf das Kind wie folgt klassifiziert werden: (a) Konsistente und den Bedürfnissen des Kindes entsprechende Reaktion, (b) inkonsistentes und eher auf die eigenen Bedürfnisse entsprechende Reaktion und (c) konsistent abweisende und unfeinfühlige Reaktion auf das Verhalten des Kindes \cite{Schmidt2004}. 
+Erwachsene, die als autonom oder sicher eingestuft werden, beschreiben ihre Vergangenheit in einer ausgeglichenen Weise und erinnern sowohl psoitive als auch negative Eingeschaften ihrer Eltern und ihrer Beziehung zu ihnen. Autonome Erwachsene sprechen über ihre Vergangenheit in einer konsistenten und kohärenten Weise. Abweisende Erwachsene beschreiben oftmals, dass sie sich nicht an die Interaktionen mit ihren Eltern erinnern können, oder spielen den Einfluss dieser Erfahrung herunter. Verstrickte Erwachsene scheinen intensiv auf ihre Eltern fokusiert zu sein und erinnern sich ihnen gegenüber an eine Reihe von verwirrenden und wutgeladenen Bindungserfahrungen. Es scheint, als ob sie in ihren Bindungserinnerungen gefangen sind und ihnen keine zusammenhängende Beschreibung möglich ist. Ungelöst-desorganisierte Erwachsene scheinen unter den Folgen posttraumatischer Erfahrungen von Verlust oder Missbrauch zu leiden. Ihre Beschreibung weisen Fehler auf und ergeben keinen Sinn \cite{Schmidt2004}.
+
+Die Klassifikation der Eltern sagt sowohl ihr Einfühlungsvermögen gegenüber ihrer eigenen Kinder, sowie die Bindung ihrer Kinder an sie vorher \cite{Siegler2008}. Sichere Eltern sind in der Regel sensible und warmherzige Eltern und ihre Kinder sind in der Regel sicher gebunden \cite{Magai2000, Steele1996}. Entsprechend haben verstrickte und abweisende Eltern tendentiell unsicher gebundene Kinder. Diese allgemeinen Befunde wurden an mehreren unterschiedlichen westlichen Kulturen bestätigt \cite{Hesse1999}. Obwohl dieser deutliche Zusammenhang zwischen elterlichen Bindungsmodellen und der Bindungssicherheit der Kinder besteht, ist der Grund für diesen Zusammenhang nicht klar \cite{Siegler2008}. Nehliegend ist, dass autonome Eltern sensibler auf ihre Kinder eingehen und dass dies demzufolge zu einer sicheren Bindung bei den Kinder führt \cite{Pederson1998}. Anstelle der eigenen Bindungserfahrung der Eltern könnte die eigene persönliche Theorie über die Entwicklung der Kinder und Kindererziehung oder ihre Persönlichkeit  eine Rolle spielen \cite{Thompson1998}.
 
 % ---------------------------------------
 \subsubsection{TBD: Stress}\label{sec:Stress}
