--- a/header.tex
+++ b/header.tex
@@ -25,7 +25,7 @@
 \geometry{top=25.4mm, left=25.4mm, right=25.4mm, bottom=25.4mm}
 \usepackage{appendix}
 \usepackage{nicefrac} % Darstellung von Brüchen im Text e.g. 1/2
-%\usepackage{longtable}
+
 
 % Für Verweise innerhalb Doc (siehe https://strobelstefan.org/?p=145) -> funktioniert nicht mich package hyperref!
 %------------------------------------------------
@@ -39,5 +39,5 @@
 %%% Für Tabellen %%%
 \newrefformat{tab}{siehe Tab.~\ref{#1} \enquote{\titleref{#1}} \ auf Seite \pageref{#1}}    
     
-
-
+% Flattersatz ohne die Titel zu beeinflussen
+\setlength{\RaggedRightParindent}{\parindent}
