--- a/main.tex
+++ b/main.tex
@@ -13,6 +13,7 @@ Bindungsstil, Stress und Wohlbefinden - Faktoren des Medienverhaltens von Eltern
 \loadglsentries{content/glossar.tex}
 
 \begin{document}
+\RaggedRight
 
 \pagenumbering{gobble} % -> Keine Seitenzahlen bis TOC
 
