Dies und das....

--- a/content/1_theorie.tex
+++ b/content/1_theorie.tex
@@ -62,7 +62,7 @@ Bindung wir durch die Präferenz einer Bezugsperson charakterisiert, wobei ein K
 
 Nach Bolwby findet die anfängliche Entwicklung von Bindung in vier Phasen statt \cite{Siegler2008}: (1) \textit{Vorphase der Bindung} (Geburt bis 6 Wochen). Das Kind reagiert auf alle Personen in seiner Umgebung mit universellen Mustern. (2) \textit{Entstehende Bindung} (6 Wochen bis 6 - 8 Monate). Das Kind reagiert bevorzugt auf vertraute Personen und entwickelt Erwartungen, wie ihre Fürsorger auf ihre Bedürfnisse reagieren und ein Gefühl, wie sehr sie ihnen vertrauen können. (3) \textit{Ausgeprägte Bindung} (zwischen 6 - 8 Monaten und $1\nicefrac{1}{2}$ - 2 Jahren. Das Kind zeigt ein selektives Bindungsverhalten und sucht die Nähe der Bezugsperson. Für die meisten Kinder dient die Mutter als sichere Basis. (4) \textit{Reziproke Beziehung} (von $1\nicefrac{1}{2}$ oder 2 Jahren an). Die rapide ansteigenden kognitiven und sprachlichen Fähigkeiten der Kinder ermöglicht ihnen, die Gefühle, Ziele und Motive der Eltern zu verstehen. Es ist zu Empathie fähig.
 
-Bindung soll nicht mit Abhängigkeit verwechselt werden \cite{Schmidt1996}. Bindung scheint die Autonomieentwicklung des Kindes zu fördern, beruht auf einer geglückten gegenseitigen Beziehung und ist somit ein Merkmal der Interaktion. Vier Typen von Bindung können beschrieben werden \cite{Resch1999}: (1) \textbf{Sichere Bindung (Typ B):} Das Kind kann eine ausgewogene Balance zwischen der Suche nach Nähe und dem Explorationsverhalten im Beisein der Hauptbezugsperson aufrecht halten. Bei Trennung zeigt es Irritation, sucht nach Kontakt und lässt sich bei der Rückkehr der Bezugsperson leicht beruhigen. (2) \textbf{Unsicher vermeidenden Bindung (Typ A):} Im Beisein der Bezugsperson zeigt das Kind eine Pseudounabhängigkeit und scheint ihr gegenüber gleichgültig zu sein. Bei Trennung zeigt das Kind nur wenig Irritation, äussert bei Wiedervereinigung mit der Bezugsperson deutliche Ablehnung. Dieses äussere Desinteresse geht jedoch gemäss \citeA{Biringen1994} mit einer erhöhten inneren Erregung einher. (2) \textbf{Die ambivalent unsichere Bindung (Typ C):} Gekennzeichnet wird dieser Typ durch einen besondere Abhängigkeit zur Bezugsperson. Bei Trennung ist das Kind sehr irritiert, zeigt eine Kombination von Näheverhältnis und Verweigerung, und lässt sich bei der Wiedervereinigung nur schwer beruhigen. (4) \textbf{Desorganisierter Bindungstyp (Typ D):} Das Kind zeigt bei der Trennung keine konsistente Stressbewältigungsstrategie. Das Verhalten ist oft konfus oder sogar widersprüchlich \cite{Siegler2008}. Diese Bindungstypen wurden durch ein von \citeA{Ainsworth1978} entwickeltes Untersuchungsverfahren, das \enquote{Strange Situation Procedure}, entwickelt. Dabei wurden bei nicht klinischen Gruppen folgende Befunde erhoben: Etwa 57\% der Kinder waren in einer sicheren Bindung, 26\% zeigten ein unsicher-vermeidendes und 17\% ein ambivalent-unsicheres Bindungsmuster. Das vierte Bindungsmuster (Typ D) wird nur selten und vornehmlich in high-risk Gruppen von Kindern gefunden \cite{Resch1999}.
+Bindung soll nicht mit Abhängigkeit verwechselt werden \cite{Schmidt1996}. Bindung scheint die Autonomieentwicklung des Kindes zu fördern, beruht auf einer geglückten gegenseitigen Beziehung und ist somit ein Merkmal der Interaktion. Vier Typen von Bindung können beschrieben werden \cite{Resch1999}: (1) \textit{Sichere Bindung (Typ B):} Das Kind kann eine ausgewogene Balance zwischen der Suche nach Nähe und dem Explorationsverhalten im Beisein der Hauptbezugsperson aufrecht halten. Bei Trennung zeigt es Irritation, sucht nach Kontakt und lässt sich bei der Rückkehr der Bezugsperson leicht beruhigen. (2) \textit{Unsicher vermeidenden Bindung (Typ A):} Im Beisein der Bezugsperson zeigt das Kind eine Pseudounabhängigkeit und scheint ihr gegenüber gleichgültig zu sein. Bei Trennung zeigt das Kind nur wenig Irritation, äussert bei Wiedervereinigung mit der Bezugsperson deutliche Ablehnung. Dieses äussere Desinteresse geht jedoch gemäss \citeA{Biringen1994} mit einer erhöhten inneren Erregung einher. (2) \textit{Die ambivalent unsichere Bindung (Typ C):} Gekennzeichnet wird dieser Typ durch einen besondere Abhängigkeit zur Bezugsperson. Bei Trennung ist das Kind sehr irritiert, zeigt eine Kombination von Näheverhältnis und Verweigerung, und lässt sich bei der Wiedervereinigung nur schwer beruhigen. (4) \textit{Desorganisierter Bindungstyp (Typ D):} Das Kind zeigt bei der Trennung keine konsistente Stressbewältigungsstrategie. Das Verhalten ist oft konfus oder sogar widersprüchlich \cite{Siegler2008}. Diese Bindungstypen wurden durch ein von \citeA{Ainsworth1978} entwickeltes Untersuchungsverfahren, das \enquote{Strange Situation Procedure}, entwickelt. Dabei wurden bei nicht klinischen Gruppen folgende Befunde erhoben: Etwa 57\% der Kinder waren in einer sicheren Bindung, 26\% zeigten ein unsicher-vermeidendes und 17\% ein ambivalent-unsicheres Bindungsmuster. Das vierte Bindungsmuster (Typ D) wird nur selten und vornehmlich in high-risk Gruppen von Kindern gefunden \cite{Resch1999}.
 
 Sicher gebundene Kinder zeigen im Kindergarten und Schule ein adäquateres Sozialverhalten, mehr Phantasie und positive Affekte beim Spiel, ein höheres Selbstwertgefühl, weniger depressive Sympotme und eine längere Aufmerksamkeitsspanne \cite{Dornes1993, Zeanah1994}. Sicher gebundene Kinder scheinen im späteren Lebensalter offener und aufgeschlossener für neue Sozialkontakte mit Gleichaltrigen und Erwachsenen zu sein, als vermeidend- oder ambivalent-unsichere Kinder \cite{Resch1999}. Zudem zeigen Kinder, die mit einem Jahr als sicher gebunden eingeschätzt werden, mit 6 Jahren signifikant weniger Psychopathologie als unsicher gebundene \cite{Lewis1984}.
 
