--- a/content/2_methode.tex
+++ b/content/2_methode.tex
@@ -158,7 +158,7 @@ Die Rekrutierung erfolgte im Sinne einer Gelegenheitsstichprobe, da das Ziel die
 
 Die Rekrutierung fand an folgenden Orten und Institutionen statt (für eine detaillierte Übersicht, siehe Anhang \ref{app:Rekrutierung}): Direkt an der ZHAW, über die Elternberatungsstellen der deutschsprachigen Schweiz \cite{Sfmvb2018}, über Spitäler mit Wochenbett und Kinderärzte, über die deutschsprachigen Familienzentren \cite{NetzwerkBildung2018}, über die Anschrift aller deutschsprachiger Niederlassungen der \citeA{Elternbildung2018} und über das private Umfeld des Autors, mit der Bitte, die Umfrage im eigenen Umkreis weiter zu verteilen. Zudem wurde die Umfrage auf der Internetplattform der Elternzeitschrift \enquote{Fritz \&  Fränzi}, dem Marktplatz des Elternmagazins \enquote{Wir Eltern} und dem Forum der Internetplattform \enquote{Swissmom} publiziert.
 
-Um für die der Rekrutierung möglichst viele Eltern für die Teilnahme an der Umfrage zu gewinnen, wurde mittels Wettbewerb und Versuchspersonenstunden Anreize für die Teilnahme geschaffen. Beim Wettbewerb handelte es sich um Warengutscheine bei einem renomierten Onlineshop für Babybedarf von 10 x CHF 50.- (www.baby-rose.ch). Dabei wurde am Ende des Fragebogens die Möglichkeit geboten, am Wettbewerb teilzunehmen und die eigene Emailadresse für die Benachrichtigung zu hinterlegen. Am Schluss der Rekrutierungsphase wurden die Gewinner per Zufall gezogen. Dazu wurden alle Wettberwerbsteilnehmen in eine separate Liste kopiert und nummeriert. Anschlissend wurde mittels minimal Pythonskript zehn Teilnehmer randomieisert ausgewählt. Diese wurden mittels Mail über ihren Gewinn informiert. Studierende der ZHAW in Angewandter Psychologie konnten sich 0.5 Versuchspersonenstunden anrechenen lassen, wenn sie die Umfrage durchführten. 
+Um für die der Rekrutierung möglichst viele Eltern für die Teilnahme an der Umfrage zu gewinnen, wurde mittels Wettbewerb und Versuchspersonenstunden Anreize für die Teilnahme geschaffen. Beim Wettbewerb handelte es sich um Warengutscheine bei einem renomierten Onlineshop für Babybedarf von 10 x CHF 50.- (www.baby-rose.ch). Dabei wurde am Ende des Fragebogens die Möglichkeit geboten, am Wettbewerb teilzunehmen und die eigene Emailadresse für die Benachrichtigung zu hinterlegen. Am Schluss der Rekrutierungsphase wurden die Gewinner per Zufall gezogen. Dazu wurden alle Wettberwerbsteilnehmen in eine separate Liste kopiert und nummeriert. Anschlissend wurde mittels minimalem Swift-Skript \cite{Swift2017} zehn Teilnehmer randomiesiert ausgewählt (Code siehe Anhang \ref{app:Wettbewerb}). Diese wurden mittels Mail über ihren Gewinn informiert. Studierende der ZHAW in Angewandter Psychologie konnten sich 0.5 Versuchspersonenstunden anrechenen lassen, wenn sie die Umfrage durchführten. 
 
 \subsection{Beschreibung der Stichprobe}
 Insgesamt schlossen brutto 248 Personen die Umfrage ab. 1454 Personen sind zumindest auf die erste Seite gekommen und haben anschliessend abgebrochen. Dies entspricht einer Beendingungsquote von 17.06\%. Die meisten Abbrüche sind auf der Startseite mit 1045 zu verzeichnen (71.87\%), gefolgt von den demografischen Daten mit 100 (6.88\%) und Medien und Mediennutzung mit 44 (3\%). Die mittlere Bearbeitungszeit des Fragebogens dauerte 27 Minuten. 
