--- a/main.tex
+++ b/main.tex
@@ -163,6 +163,11 @@ Bindungsstil, Stress und Wohlbefinden - Faktoren des Medienverhaltens von Eltern
 \input{content/Anhang/Rekrutierung.tex}
 \newpage
 
+% Wettbewerb
+\section{Wettbewerb}\label{app:Wettbewerb}
+\input{content/Anhang/Wettbewerb.tex}
+\newpage
+
 % Ehrenwörtliche Erklärung
 
 \end{document}
