--- a/content/1_theorie.tex
+++ b/content/1_theorie.tex
@@ -88,6 +88,11 @@ Die Klassifikation der Eltern sagt sowohl ihr Einfühlungsvermögen gegenüber i
 
 % ---------------------------------------
 \subsubsection{TBD: Stress}\label{sec:Stress}
+Allgemein bedeutet Stress eine subjektiv unangenehm empfundene Situation, von der eine Person negativ beeinflusst wird \cite{Stress2014}. Dabei wird zwischen Distress, der als unangenehm empfundene und dem Eustress, der als anregend empfundene Stress unterschieden. Die zahlreichen Untersuchungen die aktuell gemacht wurden können unter drei Perspektiven zusammengefasst werden \cite{Stress2014}: (1) \textit{Stimulus orientierte Sicht}. Stressoren werden über bestimmte Reize, Situations- oder Bedingungsmerkmale operationalisiert. Untersuchungen haben dabei ergeben, dass Personen unterschiedlich auf Reize reagieren. (2) \textit{Arbeitsperspektive}. Beim Stress am Arbeitsplatz wurden Faktoren, sogenannte Stressorenklassen identifiziert, die als Stressoren wahrgenommen werden. Das kann unter anderem extremer Zeitdruck oder Monotonie sein. (3) \textit{Transaktionale Perspektive}. Dabei steht die Inkongruenz zwischen den Anforderungen der Umwelt und die Ressourcen des Individuums im Zentrum. Dabei spielen Einschätzungen der eigenen Bewältigungsmöglichkeiten (Bewertungsprozesse) im Bezug auf das Ausmass des Stessempfindens eine entschiedende Rolle. 
+
+Vom Adaptionssyndrom \cite{Selye1936} bis zur Lebensereignisforschung zieht sich eine rote Linie, derzufolge Stress als eine Reaktion Organismus auf gewissermassen objektive äussere Stressoren konzeptualisiert wird \cite{Fliege2001}. Erhebungmethodisch wurde versucht, diese Stressoren zu obejektivieren. Dies erfolgte zunächst über die Messung physikalischer Einwirkungen wie Lärm, Licht, etc. Über psychodiagnostische Versuche, wo versucht wurde objektive Stressoren anhand kritischer Lebensereignisse zu definieren \cite{Holmes1980} oder über tägliche, geringfügige Belastungen und Ärgernisse zu erheben (engl. daily hassles) \cite{Quast1986}. Das Stresskonzept wurde im gesundheitspsychologischen Zusammenhang weiterentwickelt und wurde durch die Arbeiten zum Typ-A-Verhaltensmuster von \citeA{Friedman1974}, zur kognitiven Belastungs- und Bewältigungseinschätzung \cite{Lazarus1966}, zur Selbstiwrksamkeitsüberzeugung \cite{Bandura1977} beeinflusst. Die subjektive Wahrnehmnung, Bewertung und Weiterverarbeitung von Stressoren durch das Individuum wurde zunehmend in den Mittelpunkt gerückt und die Obejktivierbarkeit und Allgemeingültigkeit von äusseren Stressoren in Frage gestellt \cite{Fliege2001}. Das von \citeA{Schulz1999} entwickelte Verfahren setzt das Stresserleben der Person in den Mittelpunkt. Das Augenmerk liegt dabei auf der Häufigkeit der retrospektiv erfragten Stresserfahrungen, welchen gemäss dem Vulnerabilitäts-Stress-Modell, pathogenetische Wirkung zugeschrieben werden kann (chronischer Stess vs. vorübergehende Belastung).
+
+Bezüglich der täglich ausgesetzten Informationsflut durch die Medien spricht \citeA[S.~161ff]{Klingberg2008} von \textit{Infostress}. Dabei bezieht er sich auf die begrenzten Möglichkeiten, die ein Individuum hat, Informationen aufzunehmen. Diese neuen Anforderung können zu einer Überschreitung unserer geistigen Leistungsfähigkeit führen, was mit erhöhtem Stress einhergehen kann. Dabei kommt er zum Schluss, dass das Stressniveau vom Kontext und von der Deutung des Individuums der Situation abhängt. Stress habe demzufolge in hohem Masse mit der eigenen Einstellung zu tun, dem Kontrollgefühl, einer Situation gewachsen zu sein.
 
 % ---------------------------------------
 \subsubsection{TBD: Subjektives Wohlbefinden}\label{sec:Swb}
