sec.Theorie - swb

--- a/content/1_theorie.tex
+++ b/content/1_theorie.tex
@@ -96,11 +96,19 @@ Bezüglich der täglich ausgesetzten Informationsflut durch die Medien spricht \
 
 % ---------------------------------------
 \subsubsection{TBD: Subjektives Wohlbefinden}\label{sec:Swb}
-Siehe auch \citeA{Swami2009} für theoretischen Überblick. Und \citeA{Lyubomirsky1999}.
+Subjektives Wohlbefinden wird in der psychologischen Forschung oft mit \textit{Glück} gleichgesetzt \cite{Eid2014}. Es lassen sich zwei generelle Perspektiven unterscheiden: Einerseits das subjektive Wohlbefinden und andererseits das eudämonische Wohlbefinden. Das erstere bezeichnet Personen als glücklich, die eine häufige Lebenszufriedenheit aufweisen sowie häufig positive und selten negative Gefühle erleben. Im Gegenzug zu diesem hedonistischen Wohbefinden, zeichnet sich die Forschung des eudämonischen, oder auch psychologischen Wohlbefinden durch ein gelingendes Leben und menschliche Stärke aus. In beiden Richtungen wurden unteschiedliche Theorien und Bedingungen entwickelt, dabei sind interindividuelle Unterschiede beider Richtungen nicht unabhängig voneinander und hängen stark zusammen \cite{Eid2014}.
 
+Bereits \citeA{Aristoteles1952} (384-323 v.Chr.) bezeichnete Glück für das höchste Gut, das wir um seiner selbst Willen anstreben. Obschon die Menschheit Glück seit jeher anstrebt, wurde dieses Thema von der Psychologie lange vernachlässigt, zusammen mit Freude, Heiterkeit und Wohlbefinden \cite{Tugade2014, Gruber2014}. Eine Ursache dafür beschreibt \citeA{Maddux2005} in der sogenannten \textit{Krankheitsideologie}, die vor allem in der Psychiatrie und der klinischen Psychologie anzutreffen sei. Nach wie vor ist von \enquote{Symptom} die Rede, von \enquote{Störung, Pathologie, Krankheit, Diagnose, Behandlung, etc.} \cite[S.~14]{Maddux2005}. Im DSM, das erstmals im Jahre 1952 von der Amerikanischen Psychologenvereinigung herausgegeben, wurden auf 86 Seiten 106 psychische Störungen beschrieben. Fünfzig Jahre später (1994) waren es 297 Störungen \cite{Bucher2009}.
 
+Es scheint, als ob Glück als Regel angeschaut wird. Glückliche Menschen haben keinen Anlass, professionelle Hilfe aufzusuchen, für Glück scheint es keinen Bedarf zu geben \cite[S.~14]{Veenhoven1991}. Zum Beispiel scheint es für Eltern selbstverständlich, dass sich ihre Kinder normal entwickeln sowie gesund und glücklich sind. In diesem Fall steigt das Glück der Eltern nicht an. Es wird jedoch deutlich vermindert, wenn die Kinder Probleme bereiten \cite{Fingerman2012}. Negative Emotionen scheinen hervorstechender und schwerer zu regulieren als die für gegeben hingenommenen positiven Gefühle \cite{Charles2010}. 
 
+Die Stunde der Glücksforschung begann, so \citeA{Vitterso2013}, in den 1960er Jahren, als \citeA{Wilson1967} Korrelate von Glück untersuchte. Da wurde der typisch glückliche Mensch als jung, gesund, gebildet, gut bezahlt, extravertiert, optimistisch, weiss und verheiratet definiert, egal ob männlich oder weiblich \cite{Bucher2009}. 1984 veröffentlichte Ed Diener \cite{Diener1984} seinen Aufsatz \textit{Subjective Well-being}, was als wichtiges Jahr für die Glückspsychologie angesehen wird und ihm den Namen \enquote{Jedi Ritter} der Glücksforschung einbrachte \cite{Metzger2010}.
 
+Die Positive Psychologie wurde von \citeA{Seligman2000} proklamiert und läutete ein neues Zeitalter der Glücksforschung ein \cite{Bucher2009}. Zwischen 1980 und 1985 erschienen 2152 Publikation zu Glück, Lebenszufriedenheit und Wohlbefinden. Zwischen 2000 und 2005 waren es bereits 35069 \cite{Donaldson2014}. Positive Psychologie wurde als Wissenschaft des Glücks bezeichnet \cite{Carr2011} und beschäftigt sich mit den Tugenden und Stärken, die Glück erwiesenermassen erhöhen \cite{Peterson2004}.
+
+Die UNO begann 2012 einen Weltglücksreport zu erstellen \cite{Helliwell2013}. Glücksforschung scheint gemäss \citeA{Bucher2009} notwendig, weil mehr und mehr Menschen selbstquälerisch vor sich her grübeln, obwohl es in der ersten Welt noch nie so vielen Menschen materiell gut ging. Die Quote der sehr Glücklichen blieb über die Jahre konstant bei einem Drittel. Depressionen wurden an der Jahrtausendwende zehnmal häufiger Diagnostiziert als noch vor fünfzig Jahren \cite{Seligman2009}. Dem hält \citeA{Layous2011} entgegen, dass glücksbegünstigte Strategien Depressionen nachhaltiger und kostengünstiger mindern würde als Psychopharmaka.
+
+Eine vielfältig abgesicherte Erkenntnis sei, dass sich Glück lohne und es deshalb weiterhin psychologische Glücksforschung benötige \cite{Lyubomirsky2005}. Glückliche Menschen sollen gemäss \citeA{Danner2001} länger leben, haben ein leistungsfähigeres Immunsystem \cite{Barak2006}, sind effizienter bei der Arbeit und erfolgreicher im Beruf \cite{Achor2010}, lernen leichter, schneller und nachhaltiger \cite{Endres2014}, sind kreativer \cite{Baas2008} und haben vielfältigere Sozialbeziehungen \cite{Rodriguez2014}.
 
 
 % ---------------------------------------
