Titelblatt und Ehrenwörtliche Erklärung

--- a/content/1_theorie.tex
+++ b/content/1_theorie.tex
@@ -87,7 +87,7 @@ Erwachsene, die als autonom oder sicher eingestuft werden, beschreiben ihre Verg
 Die Klassifikation der Eltern sagt sowohl ihr Einfühlungsvermögen gegenüber ihrer eigenen Kinder, sowie die Bindung ihrer Kinder an sie vorher \cite{Siegler2008}. Sichere Eltern sind in der Regel sensible und warmherzige Eltern und ihre Kinder sind in der Regel sicher gebunden \cite{Magai2000, Steele1996}. Entsprechend haben verstrickte und abweisende Eltern tendentiell unsicher gebundene Kinder. Diese allgemeinen Befunde wurden an mehreren unterschiedlichen westlichen Kulturen bestätigt \cite{Hesse1999}. Obwohl dieser deutliche Zusammenhang zwischen elterlichen Bindungsmodellen und der Bindungssicherheit der Kinder besteht, ist der Grund für diesen Zusammenhang nicht klar \cite{Siegler2008}. Nehliegend ist, dass autonome Eltern sensibler auf ihre Kinder eingehen und dass dies demzufolge zu einer sicheren Bindung bei den Kinder führt \cite{Pederson1998}. Anstelle der eigenen Bindungserfahrung der Eltern könnte die eigene persönliche Theorie über die Entwicklung der Kinder und Kindererziehung oder ihre Persönlichkeit  eine Rolle spielen \cite{Thompson1998}.
 
 % ---------------------------------------
-\subsubsection{TBD: Stress}\label{sec:Stress}
+\subsubsection{Stress}\label{sec:Stress}
 Allgemein bedeutet Stress eine subjektiv unangenehm empfundene Situation, von der eine Person negativ beeinflusst wird \cite{Stress2014}. Dabei wird zwischen Distress, der als unangenehm empfundene und dem Eustress, der als anregend empfundene Stress unterschieden. Die zahlreichen Untersuchungen die aktuell gemacht wurden können unter drei Perspektiven zusammengefasst werden \cite{Stress2014}: (1) \textit{Stimulus orientierte Sicht}. Stressoren werden über bestimmte Reize, Situations- oder Bedingungsmerkmale operationalisiert. Untersuchungen haben dabei ergeben, dass Personen unterschiedlich auf Reize reagieren. (2) \textit{Arbeitsperspektive}. Beim Stress am Arbeitsplatz wurden Faktoren, sogenannte Stressorenklassen identifiziert, die als Stressoren wahrgenommen werden. Das kann unter anderem extremer Zeitdruck oder Monotonie sein. (3) \textit{Transaktionale Perspektive}. Dabei steht die Inkongruenz zwischen den Anforderungen der Umwelt und die Ressourcen des Individuums im Zentrum. Dabei spielen Einschätzungen der eigenen Bewältigungsmöglichkeiten (Bewertungsprozesse) im Bezug auf das Ausmass des Stessempfindens eine entschiedende Rolle. 
 
 Vom Adaptionssyndrom \cite{Selye1936} bis zur Lebensereignisforschung zieht sich eine rote Linie, derzufolge Stress als eine Reaktion Organismus auf gewissermassen objektive äussere Stressoren konzeptualisiert wird \cite{Fliege2001}. Erhebungmethodisch wurde versucht, diese Stressoren zu obejektivieren. Dies erfolgte zunächst über die Messung physikalischer Einwirkungen wie Lärm, Licht, etc. Über psychodiagnostische Versuche, wo versucht wurde objektive Stressoren anhand kritischer Lebensereignisse zu definieren \cite{Holmes1980} oder über tägliche, geringfügige Belastungen und Ärgernisse zu erheben (engl. daily hassles) \cite{Quast1986}. Das Stresskonzept wurde im gesundheitspsychologischen Zusammenhang weiterentwickelt und wurde durch die Arbeiten zum Typ-A-Verhaltensmuster von \citeA{Friedman1974}, zur kognitiven Belastungs- und Bewältigungseinschätzung \cite{Lazarus1966}, zur Selbstiwrksamkeitsüberzeugung \cite{Bandura1977} beeinflusst. Die subjektive Wahrnehmnung, Bewertung und Weiterverarbeitung von Stressoren durch das Individuum wurde zunehmend in den Mittelpunkt gerückt und die Obejktivierbarkeit und Allgemeingültigkeit von äusseren Stressoren in Frage gestellt \cite{Fliege2001}. Das von \citeA{Schulz1999} entwickelte Verfahren setzt das Stresserleben der Person in den Mittelpunkt. Das Augenmerk liegt dabei auf der Häufigkeit der retrospektiv erfragten Stresserfahrungen, welchen gemäss dem Vulnerabilitäts-Stress-Modell, pathogenetische Wirkung zugeschrieben werden kann (chronischer Stess vs. vorübergehende Belastung).
@@ -95,7 +95,7 @@ Vom Adaptionssyndrom \cite{Selye1936} bis zur Lebensereignisforschung zieht sich
 Bezüglich der täglich ausgesetzten Informationsflut durch die Medien spricht \citeA[S.~161ff]{Klingberg2008} von \textit{Infostress}. Dabei bezieht er sich auf die begrenzten Möglichkeiten, die ein Individuum hat, Informationen aufzunehmen. Diese neuen Anforderung können zu einer Überschreitung unserer geistigen Leistungsfähigkeit führen, was mit erhöhtem Stress einhergehen kann. Dabei kommt er zum Schluss, dass das Stressniveau vom Kontext und von der Deutung des Individuums der Situation abhängt. Stress habe demzufolge in hohem Masse mit der eigenen Einstellung zu tun, dem Kontrollgefühl, einer Situation gewachsen zu sein.
 
 % ---------------------------------------
-\subsubsection{TBD: Subjektives Wohlbefinden}\label{sec:Swb}
+\subsubsection{Subjektives Wohlbefinden}\label{sec:Swb}
 Subjektives Wohlbefinden wird in der psychologischen Forschung oft mit \textit{Glück} gleichgesetzt \cite{Eid2014}. Es lassen sich zwei generelle Perspektiven unterscheiden: Einerseits das subjektive Wohlbefinden und andererseits das eudämonische Wohlbefinden. Das erstere bezeichnet Personen als glücklich, die eine häufige Lebenszufriedenheit aufweisen sowie häufig positive und selten negative Gefühle erleben. Im Gegenzug zu diesem hedonistischen Wohbefinden, zeichnet sich die Forschung des eudämonischen, oder auch psychologischen Wohlbefinden durch ein gelingendes Leben und menschliche Stärke aus. In beiden Richtungen wurden unteschiedliche Theorien und Bedingungen entwickelt, dabei sind interindividuelle Unterschiede beider Richtungen nicht unabhängig voneinander und hängen stark zusammen \cite{Eid2014}.
 
 Bereits \citeA{Aristoteles1952} (384-323 v.Chr.) bezeichnete Glück für das höchste Gut, das wir um seiner selbst Willen anstreben. Obschon die Menschheit Glück seit jeher anstrebt, wurde dieses Thema von der Psychologie lange vernachlässigt, zusammen mit Freude, Heiterkeit und Wohlbefinden \cite{Tugade2014, Gruber2014}. Eine Ursache dafür beschreibt \citeA{Maddux2005} in der sogenannten \textit{Krankheitsideologie}, die vor allem in der Psychiatrie und der klinischen Psychologie anzutreffen sei. Nach wie vor ist von \enquote{Symptom} die Rede, von \enquote{Störung, Pathologie, Krankheit, Diagnose, Behandlung, etc.} \cite[S.~14]{Maddux2005}. Im DSM, das erstmals im Jahre 1952 von der Amerikanischen Psychologenvereinigung herausgegeben, wurden auf 86 Seiten 106 psychische Störungen beschrieben. Fünfzig Jahre später (1994) waren es 297 Störungen \cite{Bucher2009}.
