--- a/content/3_ergebnisse.tex
+++ b/content/3_ergebnisse.tex
@@ -125,4 +125,4 @@ Der Hypothesentest für die Hypothese 3 mittels einfacher linearer Regression li
 Bei der Prüfung der Voraussetzungen für die einfaktorielle Varianzanalyse für den Test der Hypothese 4, wurde wie bei Hypothese 1 eine Abweichung von der Normalverteilung der abähngigen Variable Mediennutzung festgestellt (Shapiro-Wilks-Test; $p_{sicher}$ = .000, $p_{unsicher}$ = .00). Da es sich um die selben Variablen handelt wie bei Hypothese 1, mit Zugabe der Kovariate Stress, wurde das Modell unter Begründung der Gruppengrösse weiter gerechnet. Der Hypothesentest für Hypothese 4 mittels ANOVA liefert ein nicht-signifikantes Er\-gebnis. Die Bindung von sicher und unsicher zusammen mit dem Stressempfinden haben keinen signifikanten Einfluss auf die ge\-samte Medien\-nutzung der Stichprobe ($F$(2,201) = .203, $p$=.817, partielles $\eta^2$=.002, $n$=204). Basierend auf diesen Ergebnissen muss die Nullhypothese $H4_{0}$ angenommen werden. 
 
 % ---------------------------------------
-\subsection{Zusätzliche Analysen} \label{sec:ZusätzlicheAnalysen}
+\subsection{TBD: Zusätzliche Analysen} \label{sec:ZusätzlicheAnalysen}
