--- a/content/4_diskussion.tex
+++ b/content/4_diskussion.tex
@@ -5,13 +5,13 @@
 
 
 % ---------------------------------------
-\subsection{Beantwortung der Fragestellung} \label{sec:BeantwortungFragestellung}
+\subsection{TBD: Beantwortung der Fragestellung} \label{sec:BeantwortungFragestellung}
 
 % ---------------------------------------
-\subsection{Interpretation} \label{sec:Interpretation}
+\subsection{TBD: Interpretation} \label{sec:Interpretation}
 
 % ---------------------------------------
-\subsection{Methodenkritik} \label{sec:Methodenkritik}
+\subsection{TBD: Methodenkritik} \label{sec:Methodenkritik}
 
 % ---------------------------------------
-\subsection{Ausblick} \label{sec:Ausblick}
+\subsection{TBD: Ausblick} \label{sec:Ausblick}
