--- a/main.tex
+++ b/main.tex
@@ -17,6 +17,10 @@ Bindungsstil, Stress und Wohlbefinden - Faktoren des Medienverhaltens von Eltern
 
 \pagenumbering{gobble} % -> Keine Seitenzahlen bis TOC
 
+%PDF Vorlageblatt
+\includepdf{content/PDF/Titel.pdf}
+\includepdf{content/PDF/Titel2.pdf}
+
 % Danksagung
 \section*{Danksagung}\label{sec:Danksagung}
 \input{content/000_danksagung.tex}
@@ -27,12 +31,7 @@ Bindungsstil, Stress und Wohlbefinden - Faktoren des Medienverhaltens von Eltern
 \input{content/00_abstract.tex}
 \newpage
 
-%PDF Vorlageblatt
-%\includepdf{pdf/Masterarbeit_Disposition_ERNST_Till_flat.pdf}
-
 %\maketitle % für Disposition weglassen
-
-
 
 % Inhaltsverzeichnis
 \setcounter{page}{1}
@@ -169,6 +168,7 @@ Bindungsstil, Stress und Wohlbefinden - Faktoren des Medienverhaltens von Eltern
 \newpage
 
 % Ehrenwörtliche Erklärung
+\includepdf{content/PDF/EhrenwSigned.pdf}
 
 \end{document}
 
